@@ -682,3 +682,39 @@ BEGIN
 END;
 $$ LANGUAGE plpgsql;
 
+
+-- called on UPDATE vn / producers / releases
+-- this trigger is very similar to notify_dbdel()
+CREATE OR REPLACE FUNCTION notify_dbedit() RETURNS trigger AS $$
+BEGIN
+  -- item is edited but not deleted? (deleted items are handled by the dbdel notify)
+  IF OLD.latest IS DISTINCT FROM NEW.latest AND NOT NEW.hidden THEN
+    INSERT INTO notifications (ntype, ltype, uid, iid, subid, c_title, c_byuser)
+      SELECT DISTINCT 'dbedit'::notification_ntype,
+             (CASE TG_TABLE_NAME WHEN 'vn' THEN 'v' WHEN 'releases' THEN 'r' ELSE 'p' END)::notification_ltype,
+             c.requester, NEW.id, c2.rev, x.title, c2.requester
+        -- look for changes of the edited entry
+        FROM changes c
+        JOIN (  SELECT vr.id, vr2.title FROM vn_rev vr
+                  JOIN vn v ON v.id = vr.vid JOIN vn_rev vr2 ON vr2.id = v.latest
+                 WHERE TG_TABLE_NAME = 'vn' AND vr.vid = NEW.id
+          UNION SELECT rr.id, rr2.title FROM releases_rev rr
+                  JOIN releases r ON r.id = rr.rid JOIN releases_rev rr2 ON rr2.id = r.latest
+                 WHERE TG_TABLE_NAME = 'releases'  AND rr.rid = NEW.id
+          UNION SELECT pr.id, pr2.name FROM producers_rev pr
+                  JOIN producers p ON p.id = pr.pid JOIN producers_rev pr2 ON pr2.id = p.latest
+                 WHERE TG_TABLE_NAME = 'producers' AND pr.pid = NEW.id
+        ) x(id, title) ON c.id = x.id
+        -- join info about the deletion itself
+        JOIN changes c2 ON c2.id = NEW.latest
+        -- join info about the user who should get this notification
+        JOIN users u ON u.id = c.requester
+        -- exclude the user who edited the entry
+       WHERE c.requester <> c2.requester
+         -- exclude users who don't want this notify
+         AND u.notify_dbedit;
+  END IF;
+  RETURN NULL;
+END;
+$$ LANGUAGE plpgsql;
+
